services/scanner/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harporis-scanner
  labels:
    app: harporis-scanner
spec:
  clusterIP: None
  selector:
    app: harporis-scanner
  ports:
    - name: metrics
      port: 9101
      targetPort: metrics
